--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-router-dom": "^6.4.5",
     "react-scripts": "5.0.1",
     "react-simple-typewriter": "^5.0.1",
+    "react-tsparticles": "^2.6.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
